--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta charset="UTF-8">
   <title>My Website</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+  <script src="navbar.js"></script>
+  <link rel ="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -26,9 +30,12 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dropdown
-              <span class="caret"></span></a>
-            <ul class="dropdown-menu">
+            <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-animation="true">
+              Dropdown 
+              <span class="caret"></span>
+            </a>
+            <!-- animated drop down menu -->
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" >
               <li><a href="#">Link 1</a></li>
               <li><a href="#">Link 2</a></li>
               <li><a href="#">Link 3</a></li>
