commented out sliding windows

--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
     <h1>Welcome to my website!</h1>
     <p>Some content goes here...</p>
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
+    <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
 
-      <!-- Wrapper for slides -->
+
       <div class="carousel-inner">
         <div class="item active">
           <img src="https://via.placeholder.com/1200x400?text=Slide+1" alt="Slide 1">
@@ -77,7 +77,7 @@
         </div>
       </div>
 
-      <!-- Left and right controls -->
+
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
         <span class="sr-only">Previous</span>
@@ -87,7 +87,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-  </div>
+  </div> -->
 </body>
 
 </html>
