--- a/index.html
+++ b/index.html
@@ -1,93 +1,21 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="UTF-8">
-  <title>My Website</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="navbar.js"></script>
-  <link rel ="stylesheet" href="style.css">
+	<title>League ARAM Percents </title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">My Website</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-animation="true">
-              Dropdown 
-              <span class="caret"></span>
-            </a>
-            <!-- animated drop down menu -->
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" >
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 2</a></li>
-              <li><a href="#">Link 3</a></li>
-            </ul>
-          </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+	<div class="header">
+		<h1>League ARAM Percents </h1>
+		<input type="text" id="search-bar" placeholder="Search for a champion...">
+	</div>
 
-  <div class="container">
-    <h1>Welcome to my website!</h1>
-    <p>Some content goes here...</p>
+	<div class="container">
+		<div class="champion-grid">
+			<!-- Champion portraits will be added here -->
+		</div>
+	</div>
 
-    <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-
-
-      <div class="carousel-inner">
-        <div class="item active">
-          <img src="https://via.placeholder.com/1200x400?text=Slide+1" alt="Slide 1">
-        </div>
-
-        <div class="item">
-          <img src="https://via.placeholder.com/1200x400?text=Slide+2" alt="Slide 2">
-        </div>
-
-        <div class="item">
-          <img src="https://via.placeholder.com/1200x400?text=Slide+3" alt="Slide 3">
-        </div>
-      </div>
-
-
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div> -->
+	<script src="script.js"></script>
 </body>
-
 </html>
