Updated links to thumbnails

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Aurelion Sol.png" alt="Aurelion Sol">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/AurelionSol.png" alt="Aurelion Sol">
 					</div>
 					<div class="champion-name">Aurelion Sol</div>
 				</div>
@@ -120,7 +120,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Bel'Veth.png" alt="Bel'Veth">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Belveth.png" alt="Bel'Veth">
 					</div>
 					<div class="champion-name">Bel'Veth</div>
 				</div>
@@ -176,7 +176,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Cho'Gath.png" alt="Cho'Gath">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Chogath.png" alt="Cho'Gath">
 					</div>
 					<div class="champion-name">Cho'Gath</div>
 				</div>
@@ -208,7 +208,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Dr. Mundo.png" alt="Dr. Mundo">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/DrMundo.png" alt="Dr. Mundo">
 					</div>
 					<div class="champion-name">Dr. Mundo</div>
 				</div>
@@ -384,7 +384,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Jarvan IV.png" alt="Jarvan IV">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/JarvanIV.png" alt="Jarvan IV">
 					</div>
 					<div class="champion-name">Jarvan IV</div>
 				</div>
@@ -424,7 +424,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/K'Sante.png" alt="K'Sante">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/KSante.png" alt="K'Sante">
 					</div>
 					<div class="champion-name">K'Sante</div>
 				</div>
@@ -432,7 +432,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Kai'Sa.png" alt="Kai'Sa">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Kaisa.png" alt="Kai'Sa">
 					</div>
 					<div class="champion-name">Kai'Sa</div>
 				</div>
@@ -504,7 +504,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Kha'Zix.png" alt="Kha'Zix">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Khazix.png" alt="Kha'Zix">
 					</div>
 					<div class="champion-name">Kha'Zix</div>
 				</div>
@@ -528,7 +528,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Kog'Maw.png" alt="Kog'Maw">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/KogMaw.png" alt="Kog'Maw">
 					</div>
 					<div class="champion-name">Kog'Maw</div>
 				</div>
@@ -536,7 +536,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/LeBlanc.png" alt="LeBlanc">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Leblanc.png" alt="LeBlanc">
 					</div>
 					<div class="champion-name">LeBlanc</div>
 				</div>
@@ -544,7 +544,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Lee Sin.png" alt="Lee Sin">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/LeeSin.png" alt="Lee Sin">
 					</div>
 					<div class="champion-name">Lee Sin</div>
 				</div>
@@ -624,7 +624,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Master Yi.png" alt="Master Yi">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/MasterYi.png" alt="Master Yi">
 					</div>
 					<div class="champion-name">Master Yi</div>
 				</div>
@@ -632,7 +632,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Miss Fortune.png" alt="Miss Fortune">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/MissFortune.png" alt="Miss Fortune">
 					</div>
 					<div class="champion-name">Miss Fortune</div>
 				</div>
@@ -712,7 +712,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Nunu & Willump.png" alt="Nunu & Willump">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Nunu.png" alt="Nunu & Willump">
 					</div>
 					<div class="champion-name">Nunu & Willump</div>
 				</div>
@@ -800,7 +800,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Rek'Sai.png" alt="Rek'Sai">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/RekSai.png" alt="Rek'Sai">
 					</div>
 					<div class="champion-name">Rek'Sai</div>
 				</div>
@@ -816,7 +816,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Renata Glasc.png" alt="Renata Glasc">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Renata.png" alt="Renata Glasc">
 					</div>
 					<div class="champion-name">Renata Glasc</div>
 				</div>
@@ -1000,7 +1000,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Tahm Kench.png" alt="Tahm Kench">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/TahmKench.png" alt="Tahm Kench">
 					</div>
 					<div class="champion-name">Tahm Kench</div>
 				</div>
@@ -1072,7 +1072,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Twisted Fate.png" alt="Twisted Fate">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/TwistedFate.png" alt="Twisted Fate">
 					</div>
 					<div class="champion-name">Twisted Fate</div>
 				</div>
@@ -1128,7 +1128,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Vel'Koz.png" alt="Vel'Koz">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Velkoz.png" alt="Vel'Koz">
 					</div>
 					<div class="champion-name">Vel'Koz</div>
 				</div>
@@ -1192,7 +1192,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Wukong.png" alt="Wukong">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/MonkeyKing.png" alt="Wukong">
 					</div>
 					<div class="champion-name">Wukong</div>
 				</div>
@@ -1216,7 +1216,7 @@
 			<div class="champion">
 				<div class="champion-link">
 					<div class="image-wrapper">
-						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/Xin Zhao.png" alt="Xin Zhao">
+						<img src="https://ddragon.leagueoflegends.com/cdn/13.5.1/img/champion/XinZhao.png" alt="Xin Zhao">
 					</div>
 					<div class="champion-name">Xin Zhao</div>
 				</div>
