--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 			<!-- Champion portraits will be added here -->
 		</div>
 	</div>
-
+	<div class="info-container">
+		
+	</div>
 	<script src="getChampions.js"></script>
 	<script src="search.js"></script>
 </body>
