Added some animations, changed theme to dark

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>League ARAM Percents</title>
 	<meta charset="utf-8">
@@ -10,26 +11,35 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="#">League ARAM Percents</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNav">
-	    <ul class="navbar-nav">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="#">Home</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">Win Percents</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">About</a>
-	      </li>
-	    </ul>
-	  </div>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+		<a class="navbar-brand" href="#">League ARAM Percents</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">About</a>
+				</li>
+			</ul>
+		</div>
 	</nav>
+
+
+	<div class="parallax">
+		<img src="Asol.jpg" alt="Asol" id="asol">
+		<div id="stars"></div>
+		<div id="stars2"></div>
+		<div id="stars3"></div>
+		<img src="logo.png" alt="logo" id="lol">
+	</div>
+
 
 	<div class="header">
 		<input type="text" id="search-bar" placeholder="Search for a champion...">
@@ -42,7 +52,7 @@
 	</div>
 	<script src="getChampions.js"></script>
 	<script src="search.js"></script>
+	<script src="script.js"></script>
 </body>
+
 </html>
-
-
