Added an intro animation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="box-shadow: 0 0 10px black;">
 		<a class="navbar-brand" href="#">League ARAM Percents</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,13 +31,24 @@
 		</div>
 	</nav>
 
+	<div class="intro">
+		<h1 class="logo-header">
+			<span class="logo">W</span>
+			<span class="logo">E</span>
+			<span class="logo">L</span>
+			<span class="logo">C</span>
+			<span class="logo">O</span>
+			<span class="logo">M</span>
+			<span class="logo">E</span>
+		</h1>
+	</div>
 
 	<div class="parallax">
-		<img src="Asol.jpg" alt="Asol" id="asol">
+		<img src="cosmic_queen.jpg" id="ashe">
 		<div id="stars"></div>
 		<div id="stars2"></div>
 		<div id="stars3"></div>
-		<img src="logo.png" alt="logo" id="lol">
+		<img src="logo.png" id="lol">
 	</div>
 
 
@@ -52,7 +63,8 @@
 	</div>
 	<script src="getChampions.js"></script>
 	<script src="search.js"></script>
-	<script src="script.js"></script>
+	<script src="logoScroll.js"></script>
+	<script src="intro.js"></script>
 </body>
 
 </html>
