Tweaked animation fade in-out

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="box-shadow: 0 0 10px black;">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-custom" style="box-shadow: 0 0 10px black;">
 		<a class="navbar-brand" href="#">League ARAM Percents</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,13 +45,14 @@
 
 	<div class="parallax">
 		<img src="cosmic_queen.jpg" id="ashe">
-		<div id="stars"></div>
-		<div id="stars2"></div>
-		<div id="stars3"></div>
 		<img src="logo.png" id="lol">
 	</div>
 
-
+	<div id="stars"></div>
+	<div id="stars2"></div>
+	<div id="stars3"></div>
+	<div id="stars4"></div>
+	
 	<div class="header">
 		<input type="text" id="search-bar" placeholder="Search for a champion...">
 	</div>
@@ -63,7 +64,7 @@
 	</div>
 	<script src="getChampions.js"></script>
 	<script src="search.js"></script>
-	<script src="logoScroll.js"></script>
+	<script src="scroll.js"></script>
 	<script src="intro.js"></script>
 </body>
 
