--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-custom" style="box-shadow: 0 0 10px black;">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light" style="box-shadow: 0 0 10px black;">
 		<a class="navbar-brand" href="#">League ARAM Percents</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
