--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light" style="box-shadow: 0 0 10px black;">
-		<a class="navbar-brand" href="#">League ARAM Percents</a>
+	<nav class="navbar navbar-expand-lg navbar-dark custom-navbar" style="box-shadow: 0 0 10px black;">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -30,6 +29,7 @@
 			</ul>
 		</div>
 	</nav>
+	
 
 	<div class="intro">
 		<h1 class="logo-header">
@@ -46,6 +46,7 @@
 	<div class="parallax">
 		<img src="cosmic_queen.jpg" id="ashe">
 		<img src="logo.png" id="lol">
+		<h1 id="intro-text">ARAM Percents</h1>
 	</div>
 
 	<div id="stars"></div>
