--- a/about.html
+++ b/about.html
@@ -20,18 +20,55 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link">Home</a>
-				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="about.html">About</a>
+					<a class="nav-link" href="home.html">Home</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link">About</a>
 				</li>
 			</ul>
 		</div>
 	</nav>
-	
 
-	<div class="intro">
+	<!-- About -->
+	<div class="container-fluid padding">
+			<div class="col-12">
+				<h1 class="about display-4 text-center">OUR MEMBERS</h1>
+				<hr>
+			</div>
+	</div>
+
+	<!-- Card -->
+	<div class="container team d-flex justify-content-center">
+		<div class="row padding">
+			<div class="col-md-5">
+				<div class="card">
+					<img class="card-imd-top" src="/img/profile.jpg">
+					<div class="card-body">
+						<h4 class="card-title text-secondary">Andy Huynh</h4>
+						<hr>
+						<p class="card-text lead">Built with JavaScript and Bootstrap Bundle (includes Popper)
+						</p>
+						<a href="#" class="btn btn-outline-secondary">See profile</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5">
+				<div class="card">
+					<img class="card-imd-top" src="/img/profile.jpg">
+					<div class="card-body">
+						<h4 class="card-title text-secondary">Jason Tran</h4>
+						<hr>
+						<p class="card-text lead">Emotional support</p>
+						<a href="#" class="btn btn-outline-secondary">See profile</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<!-- <div class="intro">
 		<h1 class="logo-header">
 			<span class="logo">W</span>
 			<span class="logo">E</span>
@@ -61,12 +98,12 @@
 	<div class="container">
 		<div class="champion-grid">
 			<!-- Champion portraits will be added here -->
-		</div>
+	</div>
 	</div>
 	<script src="getChampions.js"></script>
 	<script src="search.js"></script>
 	<script src="scroll.js"></script>
-	<script src="intro.js"></script>
+	<script src="intro.js"></script> -->
 </body>
 
 </html>
