deleted row padding

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="home.html">Home</a>
+					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="nav-item active">
 					<a class="nav-link">About</a>
@@ -40,7 +40,6 @@
 
 	<!-- Card -->
 	<div class="container team d-flex justify-content-center">
-		<div class="row padding">
 			<div class="col-md-5">
 				<div class="card">
 					<img class="card-imd-top" src="/img/profile.jpg">
@@ -64,7 +63,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 
 
