--- a/about.html
+++ b/about.html
@@ -42,24 +42,20 @@
 	<div class="container team d-flex justify-content-center">
 			<div class="col-md-5">
 				<div class="card">
-					<img class="card-imd-top" src="/img/profile.jpg">
 					<div class="card-body">
-						<h4 class="card-title text-secondary">Andy Huynh</h4>
+						<h4 class="card-title">Andy Huynh</h4>
 						<hr>
-						<p class="card-text lead">Built with JavaScript and Bootstrap Bundle (includes Popper)
+						<p class="card-text">Stupid Idiot 1
 						</p>
-						<a href="#" class="btn btn-outline-secondary">See profile</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-5">
 				<div class="card">
-					<img class="card-imd-top" src="/img/profile.jpg">
 					<div class="card-body">
-						<h4 class="card-title text-secondary">Jason Tran</h4>
+						<h4 class="card-title">Jason Tran</h4>
 						<hr>
-						<p class="card-text lead">Emotional support</p>
-						<a href="#" class="btn btn-outline-secondary">See profile</a>
+						<p class="card-text">Stupid Idiot 2</p>
 					</div>
 				</div>
 			</div>
