Minor comment issue resolved

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 
 	<div class="container">
 		<div class="champion-grid">
-			<!-- Champion portraits will be added here -->
+			 Champion portraits will be added here
 	</div>
 	</div>
 	<script src="getChampions.js"></script>
