--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link">About</a>
+					<a class="nav-link" href="about.html">About</a>
 				</li>
 			</ul>
 		</div>
