--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
 			<div class="col-md-5">
 				<div class="card">
 					<div class="card-body">
-						<h4 class="card-title">Andy Huynh</h4>
+						<h4 class="card-title">Jason Tran</h4>
 						<hr>
-						<p class="card-text">Stupid Idiot 2
+						<p class="card-text">Stupid Idiot 1
 						</p>
 					</div>
 				</div>
@@ -53,9 +53,9 @@
 			<div class="col-md-5">
 				<div class="card">
 					<div class="card-body">
-						<h4 class="card-title">Jason Tran</h4>
+						<h4 class="card-title">Andyh Huynh</h4>
 						<hr>
-						<p class="card-text">Stupid Idiot 1</p>
+						<p class="card-text">Stupid Idiot 2</p>
 					</div>
 				</div>
 			</div>
